# expert-digest

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: default.yaml  handbook_topic_taxonomy.json  prompts.yaml
data/sample/: articles.jsonl
docs/: development_plan.md  handbook_skill_quality_readiness.md  m4_closure.md  m8_cherry_studio_setup.md  progress_status.md  wiki_foundation_real_data_validation.md  wiki_foundation_usage.md
docs/superpowers/plans/: 2026-04-21-expertdigest-2-wiki-foundation.md  2026-04-22-expertdigest-handbook-skill-llm-book.md  (+1 more)
scripts/: quickstart_selfcheck.ps1  run_streamlit.ps1
src/expert_digest/: __init__.py  cli.py  config.py
src/expert_digest/app/: services.py  (+1 more)
tests/: conftest.py  test_app_services.py  test_author_profile.py  test_book_pipeline.py  test_cleaner.py  test_cli.py  test_cli_author_profile.py  test_cli_cluster_topics.py  test_cli_mcp.py  test_cli_wiki.py  test_embedder.py  test_evidence_builder.py  test_evidence_models.py  test_handbook_quality.py  test_handbook_topic_mode.py  test_handbook_writer.py  test_import.py  test_jsonl_loader.py  test_llm_client.py  test_markdown_loader.py  test_mcp_server.py  test_mcp_toolkit.py  test_models.py  test_prompts.py  test_query_service.py  test_rag.py  test_retriever.py  test_skill_writer.py  test_splitter.py  test_sqlite_evidence_store.py  test_sqlite_store.py  test_topic_clusterer.py  test_topic_graph.py  test_topic_report.py  test_wiki_analyzer.py  test_wiki_evaluator.py  test_wiki_frontmatter.py  test_wiki_linter.py  test_wiki_retriever.py  test_wiki_vault.py  (+2 more)
(+45 files in other folders)
